--- a/json-plugin-ear/pom.xml
+++ b/json-plugin-ear/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20140107</version>
+            <version>${version.org.json}</version>
             <scope>provided</scope>
             <type>jar</type>
         </dependency>
