--- a/json-plugin/pom.xml
+++ b/json-plugin/pom.xml
@@ -28,7 +28,7 @@
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20140107</version>
+            <version>${version.org.json}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
@@ -63,13 +63,13 @@
         <dependency>
             <groupId>com.arjuna.dbutils.testsupport</groupId>
             <artifactId>dataflownodes-dummy</artifactId>
-            <version>1.0.0p2m1</version>
+            <version>${version.com.arjuna.dbutils.testsupport}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.arjuna.dbutils.testsupport</groupId>
             <artifactId>dataflownodes-lifecycle</artifactId>
-            <version>1.0.0p2m1</version>
+            <version>${version.com.arjuna.dbutils.testsupport}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
